--- a/k8s/prometheus/operator.yaml
+++ b/k8s/prometheus/operator.yaml
@@ -985,7 +985,7 @@ grafana:
     ## Annotations for Grafana Ingress
     ##
     annotations: 
-      # kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
 
     ## Labels to be added to the Ingress
@@ -998,7 +998,7 @@ grafana:
     # hosts:
     #   - grafana.domain.com
     hosts:
-      - grafana.monitoring.localhost
+      - grafana.monitoring.homelab
     ## Path for grafana ingress
     path: /
 
