--- a/k8s/prometheus/operator.yaml
+++ b/k8s/prometheus/operator.yaml
@@ -959,7 +959,7 @@ grafana:
   ## Timezone for the default dashboards
   ## Other options are: browser or a specific timezone, i.e. Europe/Luxembourg
   ##
-  defaultDashboardsTimezone: utc
+  defaultDashboardsTimezone: America/Sao_Paulo
 
   ## Editable flag for the default dashboards
   ##
