--- a/k8s/prometheus/operator.yaml
+++ b/k8s/prometheus/operator.yaml
@@ -3497,7 +3497,7 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the podmonitors created
     ##
-    podMonitorSelectorNilUsesHelmValues: true
+    podMonitorSelectorNilUsesHelmValues: false
 
     ## PodMonitors to be selected for target discovery.
     ## If {}, select all PodMonitors
@@ -3676,7 +3676,6 @@ prometheus:
          resources:
            requests:
              storage: 2Gi
-       selector: {}
 
     ## Using tmpfs volume
     ##
